; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_io7x.c_msm_camio_probe_on.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_io7x.c_msm_camio_probe_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.msm_camera_sensor_info* }
%struct.msm_camera_sensor_info = type { %struct.msm_camera_device_platform_data* }
%struct.msm_camera_device_platform_data = type { i32 (...)* }

@CAMIO_VFE_CLK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @msm_camio_probe_on(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.msm_camera_sensor_info*, align 8
  %4 = alloca %struct.msm_camera_device_platform_data*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.msm_camera_sensor_info*, %struct.msm_camera_sensor_info** %7, align 8
  store %struct.msm_camera_sensor_info* %8, %struct.msm_camera_sensor_info** %3, align 8
  %9 = load %struct.msm_camera_sensor_info*, %struct.msm_camera_sensor_info** %3, align 8
  %10 = getelementptr inbounds %struct.msm_camera_sensor_info, %struct.msm_camera_sensor_info* %9, i32 0, i32 0
  %11 = load %struct.msm_camera_device_platform_data*, %struct.msm_camera_device_platform_data** %10, align 8
  store %struct.msm_camera_device_platform_data* %11, %struct.msm_camera_device_platform_data** %4, align 8
  %12 = load %struct.msm_camera_device_platform_data*, %struct.msm_camera_device_platform_data** %4, align 8
  %13 = getelementptr inbounds %struct.msm_camera_device_platform_data, %struct.msm_camera_device_platform_data* %12, i32 0, i32 0
  %14 = load i32 (...)*, i32 (...)** %13, align 8
  %15 = call i32 (...) %14()
  %16 = load i32, i32* @CAMIO_VFE_CLK, align 4
  %17 = call i32 @msm_camio_clk_enable(i32 %16)
  ret i32 %17
}

declare dso_local i32 @msm_camio_clk_enable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
